--- a/variables_and_string.ipynb
+++ b/variables_and_string.ipynb
@@ -31,9 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A Brief Profile of C. Dickens in 505 characters.\n",
+      "\n",
+      "Hello. My name is Charles Dickens.\n",
+      "I am an English novelist. I was born on February 7, 1812, in Portsmouth, England.\n",
+      "I am most famous as a writer of the Victorian era.\n",
+      "I married Catherine Hogarth in 1836. We have ten children.\n",
+      "Some of my most famous works include \"A Christmas Carol\", \"Oliver Twist\", \"David Copperfield\", and \"Great Expectations\".\n",
+      "Besides being a writer, my other talent was doing dramatic public readings of my work.\n",
+      "I died on June 9, 1870, at my home in Gad's Hill Place, Kent, England.\n",
+      "SUCCESS! Yes, your output text matches the test text.\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"CHARLES DICKENS\"\n",
     "dob = \"February 7, 1812\"\n",
@@ -47,16 +64,20 @@
     "death_date = \"June 9, 1870\"\n",
     "place_of_death = \"Gad's Hill Place, Kent, England\"\n",
     "\n",
-    "#Use the different methods that are given under 'REQUIREMENTS' to complete the code.\n",
+    "C = name[0].lower()\n",
     "\n",
+    "title = f\"A Brief Profile of C. Dickens in 505 characters.\"\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "title = # The title of the output text should be stored in this variable\n",
-    "\n",
-    "output_text = # Your final output text should be stored in this variable, which will also include the 'title'.\n",
-    "\n",
+    "output_text = (\n",
+    "              f\"{title}\\n\\n\"\n",
+    "              f\"Hello. My name is {name.title()}.\\n\" \n",
+    "              f\"I am an English novelist. I was born on {dob}, in {birthplace.title()}.\\n\" \n",
+    "              f\"I am most famous as {famous_for.replace('A','a')}.\\n\" \n",
+    "              f\"I married {married_to} in {year_of_marriage}. We have {number_of_children} children.\\n\" \n",
+    "              f\"Some of my most famous works include {famous_works}.\\n\" \n",
+    "              f\"Besides being a writer, my other talent was {other_talent.lower()}.\\n\" \n",
+    "              f\"I died on {death_date}, at my home in {place_of_death}.\"\n",
+    ")\n",
     "print(output_text)\n",
     "\n",
     "test_text = f'''A Brief Profile of C. Dickens in 505 characters.\n",
@@ -92,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
